# statmentor-ai

./: .gitignore  ARCHITECTURE.md
apps/api/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: dependencies.py
apps/api/app/classification/: __init__.py  engine.py
apps/api/app/core/: config.py
apps/api/app/db/: base.py  enums.py  session.py  types.py
apps/api/app/ingestion/: exceptions.py  parser.py  storage.py
apps/api/app/recommendations/: __init__.py  registry.py
apps/api/app/repositories/: __init__.py  base.py  dataset.py  project.py  research_design.py
apps/api/app/schemas/: __init__.py  analysis.py  dataset.py  health.py  project.py  recommendation.py  report.py  research_question.py  user.py  variable.py
apps/api/app/scripts/: __init__.py  bootstrap_production.py  seed_development.py
apps/api/app/services/: dataset.py  recommendation.py  research_design.py  variable.py
apps/api/tests/: test_structure.py
apps/api/tests/api/: test_datasets.py  test_methods.py  test_projects.py  test_recommendations.py  test_research_designs.py  test_variables.py
apps/api/tests/classification/: test_engine.py
apps/api/tests/ingestion/: test_parser.py  test_storage.py
apps/api/tests/recommendations/: test_registry.py
apps/api/tests/repositories/: test_dataset_repository.py  test_project_repository.py
apps/api/tests/scripts/: test_bootstrap_production.py
apps/api/tests/services/: test_recommendation.py  test_research_design.py
apps/web/: README.md  (+4 more)
(+76 files in other folders)
